# somdata-market-graph

./: README.md  setup.cfg
.github/workflows/: python-app.yml
src/: periodic_task.py
src/currency_exchange/: currency_exchange_service.py
src/server/: apps.py  settings.py  test_settings.py  urls.py  wsgi.py
src/server/endpoints/: currency_exchange.py
src/server/models/: currency_exchange.py
src/server/static/: currency_exchanges.js  currency_exchanges_plot.js  index.html
test/: test_it_works.py
test/unit/: test_currency_exchange_service.py  test_currency_exchanges_endpoint.py  test_periodic_task.py  test_server_ready.py
