[metadata]
name = somdata-market-graph
version = 1.0
description = Market Graph

[options]
package_dir =
  = src

packages = find:


python_requires = >=3.7
install_requires =
  requests
  django
  djangorestframework

[options.extras_require]
testing =
  pytest
  pytest-django
  mock

[tool:pytest]
python_classes =
