[metadata]
name = somdata-market-graph
version = 1.0
description = Market Graph

[options]
package_dir =
  = src

packages = find:


python_requires = >=3.7
install_requires =
  requests
  django
  djangorestframework
  dateutil

[options.extras_require]
testing =
  flake8
  pytest
  pytest-django
  mock

[tool:pytest]
DJANGO_SETTINGS_MODULE = server.test_settings
